Make sure spacing is even between city boxes on front page
Fixes a regression where I was trying to adjust the padding for
narrower displays.

Addresses #3551

--- a/themes/onboard_theme/css/style.css
+++ b/themes/onboard_theme/css/style.css
@@ -7377,7 +7377,7 @@ textarea.node-type-webform .form-text.form-email {
     width: 33.33333333333333%;
   }
 }
-@media (min-width: 480px) {
+@media (min-width: 480px) and (max-width: 767px) {
   .view-public-cities.view-display-id-block_1 .views-row.views-row-odd {
     padding-left: 0;
     padding-right: 10px;
